@@ -116,7 +116,6 @@ namespace kt
 		if (m_editor)
 		{
 			getGUI()->removeTabPage(m_editor);
-			m_editor->deleteLater();
 			m_editor = 0;
 		}
 		
@@ -200,7 +199,6 @@ namespace kt
 			if (m_editor)
 			{
 				getGUI()->removeTabPage(m_editor);
-				m_editor->deleteLater();
 				m_editor = 0;
 			}
 		}
@@ -212,7 +210,6 @@ namespace kt
 			return;
 		
 		getGUI()->removeTabPage(m_editor);
-		m_editor->deleteLater();
 		m_editor = 0;
 		m_bws_action->setChecked(false);
 	}
