@@ -71,7 +71,6 @@ namespace kt
 		}
 		
 		getGUI()->removePrefPage(pref);
-		pref->deleteLater();
 		pref = 0;
 		disconnect(getCore(),SIGNAL(settingsChanged()),this,SLOT(preferencesUpdated()));
 	}
