@@ -6,6 +6,7 @@ Changes in 3.0.2 :
 - Fix remove from group not working (160499)
 - Fix crash in torrent creator when there are no trackers
 - Fix sorting in files tab
+- Fix crash when unloading plugins with Qt4.4 (160565)
 
 Changes in 3.0.1 :
 - Fix sessionTTL not being able to be bigger then 99
